# nrs_solution

./: CMakeLists.txt  package.xml
data/: discrete_waypoints.txt
launch/: nrs_continuous_teach.launch  nrs_discrete_teach.launch  nrs_follow.launch  nrs_fsm.launch  nrs_llm.launch  nrs_scan.launch
scripts/: nrs_node_continuous_teaching.py  nrs_node_discrete_teaching.py  nrs_node_stream_camera.py  test.py
src/: nrs_node_central_FSM.cpp
